Fix overlapping text on wrap

--- a/src/components/team-hero/teamHero.scss
+++ b/src/components/team-hero/teamHero.scss
@@ -35,5 +35,6 @@ team-hero {
   .hero-title {
     font-size: 4em;
     display: inline-block;
+    line-height: 1em;
   }
 }
